src/test/ui/should-fail-no_gate_irrefutable_if_let_pattern.stderr
error[E0162]: irrefutable if-let pattern
  --> $DIR/should-fail-no_gate_irrefutable_if_let_pattern.rs:3:12
   |
LL |     if let _ = 5 {}
   |            ^ irrefutable pattern

error: aborting due to previous error

For more information about this error, try `rustc --explain E0162`.
