src/test/ui/should-fail-no_gate_irrefutable_if_let_pattern.rs
// should-fail-irrefutable_let_patterns
fn main() {
    if let _ = 5 {}
    //~^ ERROR irrefutable if-let pattern [E0162]
}
